2011-02-07 S. Thiell <stephane.thiell@cea.fr>

	* CLI/OptionParser.py: Add clush -E <engine> hidden option to enforce a
	specific I/O events engine (should not be needed, but can be useful for
	testing). Improve engine selection error handling.

2011-02-06 S. Thiell <stephane.thiell@cea.fr>

	* Engine/Select.py: New select()-based engine (from H. Doreau, ticket #8).

	* CLI/{Clush,Display}.py: Do not display exit code with clush when -qS is
	specified (ticket #117).

	* CLI/Clush.py: Allow clush to run without argument when stdin is not a
	tty, by disabling ssh pseudo-tty allocation. You can now type `echo uname
	| clush -w <nodes>` (ticket #134).

	* Worker/Ssh.py: Fix issue when more than one ssh options are specified
	with -o or in clush.conf (ticket #138).

2011-02-05 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Fix issue when executing local command with clush -b in
	interactive mode (eg. !uname).

	* Worker/Worker.py: Define new current_node, current_msg, current_errmsg
	and current_rc Worker variables, updated at each event (last_read(),
	last_node() and last_retcode() will be deprecated from version 2.0).

	* Worker/*.py: Performance: removed _invoke() indirections when generating
	events + local variables optimization.

	* Task.py: Performance: replaced _TaskMsgTree metaclass by direct calls to
	MsgTree methods + local variables optimization.

	* Worker/Ssh.py: Local variables optimization.

	* CLI/Clush.py: Do not disable internal messages gathering when using -bL
	for proper display after Ctrl-C interruption (#133).

2011-01-15 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.4 released.

	* NodeSet.py: Add docstring for NodeSet string arithmetics (, ! & ^),
	which is also called extended string pattern (trac ticket #127).

2010-12-14 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.4 beta 1 released.

	* CLI/Display.py: In buffer header (for -b/-B without -L), print node
	count in brackets if > 1 and enabled by configuration (trac ticket #130).