@@ -8,8 +8,9 @@
 fanout: 64
 connect_timeout: 15
 command_timeout: 0
-history_size: 100
 color: auto
+fd_max: 8192
+history_size: 100
 node_count: yes
 verbosity: 1
 #ssh_user: root
