@@ -1,6 +1,6 @@
 .\" Man page generated from reStructeredText.
 .
-.TH CLUSH.CONF 5 "2010-12-14" "1.4" "ClusterShell User Manual"
+.TH CLUSH.CONF 5 "2011-02-08" "1.4.1" "ClusterShell User Manual"
 .SH NAME
 clush.conf \- Configuration file for clush
 .
@@ -81,22 +81,36 @@ been established. This parameter is passed to ssh.  In addition, the
 ClusterShell library ensures that any commands complete in less than
 ( connect_timeout + command_timeout ). If set to \fI0\fP, no timeout occurs.
 .TP
+.B color
+.
+Whether to use ANSI colors to surround node or nodeset prefix/header with
+escape sequences to display them in color on the terminal. Valid arguments
+are \fCnever\fP, \fCalways\fP or \fCauto\fP (which use color if standard
+output/error refer to a terminal). Colors are set to [34m (blue foreground
+text) for stdout and [31m (red foreground text) for stderr, and cannot be
+modified.
+.TP
+.B fd_max
+.
+Maximum number of open file descriptors permitted per clush process (soft
+resource limit for open files). This limit can never exceed the system
+(hard) limit. The \fIfd_max\fP (soft) and system (hard) limits should be high
+enough to run \fCclush\fP, although their values depend on your \fIfanout\fP value.
+.TP
 .B history_size
 .
 Set the maximum number of history entries saved in the GNU readline history
 list. Negative values imply unlimited history file size.
 .TP
-.B color
-.
-Whether to use ANSI colors to surround node or nodeset prefix/header with escape sequences to display them in color on the terminal. Valid arguments are \fCnever\fP, \fCalways\fP or \fCauto\fP (which use color if standard output/error refer to a terminal). Colors are set to [34m (blue foreground text) for stdout and [31m (red foreground text) for stderr, and cannot be modified.
-.TP
 .B node_count
 .
-Should \fCclush\fP display additional (node count) information in buffer header? (\fIyes\fP/\fIno\fP)
+Should \fCclush\fP display additional (node count) information in buffer
+header? (\fIyes\fP/\fIno\fP)
 .TP
 .B verbosity
 .
-Set the verbosity level: \fI0\fP (quiet), \fI1\fP (default), \fI2\fP (verbose) or more (debug).
+Set the verbosity level: \fI0\fP (quiet), \fI1\fP (default), \fI2\fP (verbose) or more
+(debug).
 .TP
 .B ssh_user
 .
@@ -122,6 +136,7 @@ connect_timeout: 15
 command_timeout: 0
 history_size: 100
 color: auto
+fd_max: 10240
 node_count: yes
 
 .fi
