@@ -1,3 +1,9 @@
+2011-02-08 S. Thiell <stephane.thiell@cea.fr>
+
+	* CLI/Config.py: Add fd_max integer parameter to set the max number of
+	open files (soft limit) permitted per clush process. This will fix an
+	issue on systems where hard limit is not reasonable.
+
 2011-02-07 S. Thiell <stephane.thiell@cea.fr>
 
 	* CLI/OptionParser.py: Add clush -E <engine> hidden option to enforce a
